--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             let n = num.value;
             const response  = await fetch("http://localhost:8080/primes/" + n );
             let primes = await response.json();
-            document.getElementById("primes").innerText = true;
+            document.getElementById("primes").innerText = primes;
         }
         async function cipher() {
             let text = document.getElementById("text");
